# qmllint-codequality

./: .gitignore  .gitlab-ci.yml  .qmllint.ini  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
qmllint_codequality/: __init__.py  __main__.py  codequality.py  qmllint.py
tests/: __init__.py  conftest.py  test_conversion.py
tests/qml/: Screen01.qml  main.qml
tests/qml/errors/: AccessSingletonViaObject.qml  AnchorsUsage.qml  AttachedPropertyReuse.qml  AttachedPropertyType.qml  DeferredPropertyId.qml  Deprecated.qml  DuplicatePropertyBinding.qml  DuplicatedName.qml  IdQuotation.qml  ImportFailure.qml  IncompatibleType.qml  InheritanceCycle.qml  InvalidQmlLintDirective.qml  MissingProperty.qml  MultilineStrings.qml  NonListProperty.qml  PropertyAliasCycles.qml  ReadOnlyProperty.qml  RequiredProperty.qml  UnqualifiedAccess.qml  UnresolvedAlias.qml  UnusedImports.qml  WithStatement.qml
