############################################# Project ##############################################

[project]
name = "clangtidy-codequality"
authors = [{ name = "Brinfer", email = "brinfer@proton.me" }]
description = "Convert qmllint output to Code Quality JSON"
requires-python = ">=3.10"
keywords = ["qmllint", "python", "code quality", "gitlab"]
classifiers = [
    "Development Status :: Work in Progress",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
# dependencies =[""]
dynamic = ["version", "readme"]

[project.scripts]
clangtidy-codequality = "qmllint_codequality.__main__:main"

########################################## Package builder #########################################

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "qmllint_codequality.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages]
find = {}

############################################## Linter ##############################################

[tool.pylint.main]
persistent = true
suggestion-mode = true
load-plugins = ["pylint.extensions.docstyle", "pylint_pytest"]

[tool.pylint.design]
max-branches = 10

[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-string = "    "
max-line-length = 120

[tool.pylint.logging]
logging-format-style = "old"
logging-modules = ["logging"]

[tool.pylint.variables]
allow-global-unused-variables = false

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
allow_untyped_globals = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

############################################# Formatter ############################################

[tool.black]
line-length = 120
